2017-07-09 Eric Sandall <sandalle@sourcemage.org>
	* DEPENDS: ibase plugin exclusion code is broken. Should work per src/sql/README.module .

2017-06-30 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.9.1
	* patches/ PRE_BUILD: updated

2017-06-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* DEPENDS: depend on pcre2, not pcre

2017-05-31 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.9.0

2017-01-23 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.8.0

2017-01-18 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: tweak
	* BUILD CONFIGURE PRE_SUB_DEPENDS SUB_DEPENDS: delete obsolete options
	* firebird.patch: update to new config system

2016-12-14 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.7.1
	* CONFIGURE BUILD: delete obsolete NIS option

2016-11-28 Thomas Orgis <sobukus@sourcemage.org>
	* PRE_BUILD: ldconfig helps when we added things to ld.so.conf .
	  Otherwise, stuff needing a freshly cast qtbase may break
	  (e.g. avidemux3).

2016-10-05 Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: SSL => openssl; libressl is not supported

2016-06-16 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.7.0
	* CONFIGURE BUILD DEPENDS: remove obsolete options

2016-06-08 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.6.1

2016-04-14 Treeve Jelbert <treeve@sourcemage.org>
	* SUB_DEPENDS: restore deleted 'echo'

2016-04-13 Treeve Jelbert <treeve@sourcemage.org>
	* PRE_SUB_DEPENDS SUB_DEPENDS: improve MYSQL
	* DEPENDS: more

2016-03-28 Treeve Jelbert <treeve@sourcemage.org>
        * CONFLICTS: added, all qt5 spells should self-conflict
2016-03-16 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 5.6.0

2016-02-07 Thomas Orgis <sobukus@sourcemage.org>
	* BUILD: avoid the conflict with installed version by not
	  building RPATH into binaries (overrides LD_LIBRARY_PATH at build time).
	  See https://bugreports.qt.io/browse/QTBUG-3069 .
	* CONFLICTS: removed again
