@@ -1,4 +1,4 @@
-From 62a2934c0ab6c42979efa37fc28f267aa86f7d97 Mon Sep 17 00:00:00 2001
+From a4e0b69e10123e5461b95482fd1c9428adc93a28 Mon Sep 17 00:00:00 2001
 From: Treeve Jelbert <treeve@sourcemage.org>
 Date: Mon, 9 May 2011 21:06:05 +0200
 Subject: [PATCH 1/2] fix config tests for firebird fix linking with firebird
@@ -7,8 +7,8 @@ Subject: [PATCH 1/2] fix config tests for firebird fix linking with firebird
 firebird uses libtommath
 ---
  config.tests/unix/ibase/ibase.pro     | 1 +
- src/plugins/sqldrivers/configure.json | 5 +++--
- 2 files changed, 4 insertions(+), 2 deletions(-)
+ src/plugins/sqldrivers/configure.json | 2 +-
+ 2 files changed, 2 insertions(+), 1 deletion(-)
 
 diff --git a/config.tests/unix/ibase/ibase.pro b/config.tests/unix/ibase/ibase.pro
 index 8c47f66954..2c165a25ad 100644
@@ -19,20 +19,10 @@ index 8c47f66954..2c165a25ad 100644
  CONFIG -= qt dylib
 +LIBS += -lfbclient -ltommath -lpthread
 diff --git a/src/plugins/sqldrivers/configure.json b/src/plugins/sqldrivers/configure.json
-index 5603ceb37b..18c03f5354 100644
+index 5603ceb37b..2345fe7d5a 100644
 --- a/src/plugins/sqldrivers/configure.json
 +++ b/src/plugins/sqldrivers/configure.json
-@@ -16,7 +16,8 @@
-             "psql_config": "string",
-             "sqlite": { "type": "enum", "name": "system-sqlite", "values": { "qt": "no", "system": "yes" } },
-             "sql-db2": "boolean",
--            "sql-ibase": "boolean",
-+            "sql-
-+ibase": "boolean",
-             "sql-mysql": "boolean",
-             "sql-oci": "boolean",
-             "sql-odbc": "boolean",
-@@ -50,7 +51,7 @@
+@@ -50,7 +50,7 @@
              "test": "unix/ibase",
              "sources": [
                  { "libs": "-lgds32_ms", "condition": "config.win32" },
