@@ -1,3 +1,6 @@
+2017-07-10 Treeve Jelbert <treeve@sourcemage.org>
+	* patches/* : fix broken patch
+
 2017-07-09 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: ibase plugin exclusion code is broken. Should work per src/sql/README.module .
 
